Next step, all tests pass with -DVerifyIR=false