@@ -30,6 +30,11 @@ import static compiler.valhalla.inlinetypes.InlineTypes.rL;
 import static compiler.valhalla.inlinetypes.InlineTypes.rD;
 import static compiler.valhalla.inlinetypes.InlineTypeIRNode.*;
 
+import jdk.internal.value.ValueClass;
+import jdk.internal.vm.annotation.ImplicitlyConstructible;
+import jdk.internal.vm.annotation.LooselyConsistentValue;
+import jdk.internal.vm.annotation.NullRestricted;
+
 import java.lang.reflect.Method;
 import java.util.Arrays;
 
@@ -39,7 +44,8 @@ import java.util.Arrays;
  * @summary Test nullable value class arrays.
  * @library /test/lib /
  * @requires (os.simpleArch == "x64" | os.simpleArch == "aarch64")
- * @compile -XDenablePrimitiveClasses TestNullableArrays.java
+ * @compile -XDenablePrimitiveClasses --add-exports java.base/jdk.internal.vm.annotation=ALL-UNNAMED
+ *          --add-exports java.base/jdk.internal.value=ALL-UNNAMED TestNullableArrays.java
  * @run main/othervm/timeout=300 -XX:+EnableValhalla -XX:+EnablePrimitiveClasses compiler.valhalla.inlinetypes.TestNullableArrays
  */
 
@@ -86,8 +92,8 @@ public class TestNullableArrays {
     @IR(applyIf = {"FlatArrayElementMaxSize", "!= -1"},
         counts = {ALLOCA, "= 1"},
         failOn = LOAD)
-    public MyValue1.ref[] test1(int len) {
-        MyValue1.ref[] va = new MyValue1.ref[len];
+    public MyValue1[] test1(int len) {
+        MyValue1[] va = new MyValue1[len];
         if (len > 0) {
             va[0] = null;
         }
@@ -100,7 +106,7 @@ public class TestNullableArrays {
     @Run(test = "test1")
     public void test1_verifier() {
         int len = Math.abs(rI % 10);
-        MyValue1.ref[] va = test1(len);
+        MyValue1[] va = test1(len);
         if (len > 0) {
             Asserts.assertEQ(va[0], null);
         }
@@ -113,7 +119,7 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
     public long test2() {
-        MyValue1.ref[] va = new MyValue1.ref[1];
+        MyValue1[] va = new MyValue1[1];
         va[0] = MyValue1.createWithFieldsInline(rI, rL);
         return va[0].hash();
     }
@@ -128,7 +134,7 @@ public class TestNullableArrays {
     // updating its elements in a loop and computing a hash.
     @Test
     @IR(failOn = {ALLOCA})
-    public long test3(MyValue1.ref[] va) {
+    public long test3(MyValue1[] va) {
         long result = 0;
         for (int i = 0; i < 10; ++i) {
             if (va[i] != null) {
@@ -142,7 +148,7 @@ public class TestNullableArrays {
 
     @Run(test = "test3")
     public void test3_verifier() {
-        MyValue1.ref[] va = new MyValue1.ref[10];
+        MyValue1[] va = new MyValue1[10];
         long expected = 0;
         for (int i = 1; i < 10; ++i) {
             va[i] = MyValue1.createWithFieldsDontInline(rI + i, rL + i);
@@ -161,13 +167,13 @@ public class TestNullableArrays {
     // Test returning a value class array received from the interpreter
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOAD, STORE, LOOP, TRAP})
-    public MyValue1.ref[] test4(MyValue1.ref[] va) {
+    public MyValue1[] test4(MyValue1[] va) {
         return va;
     }
 
     @Run(test = "test4")
     public void test4_verifier() {
-        MyValue1.ref[] va = new MyValue1.ref[10];
+        MyValue1[] va = new MyValue1[10];
         for (int i = 0; i < 10; ++i) {
             va[i] = MyValue1.createWithFieldsDontInline(rI + i, rL + i);
         }
@@ -179,16 +185,16 @@ public class TestNullableArrays {
 
     // Merge value class arrays created from two branches
     @Test
-    public MyValue1.ref[] test5(boolean b) {
-        MyValue1.ref[] va;
+    public MyValue1[] test5(boolean b) {
+        MyValue1[] va;
         if (b) {
-            va = new MyValue1.ref[5];
+            va = new MyValue1[5];
             for (int i = 0; i < 5; ++i) {
                 va[i] = MyValue1.createWithFieldsInline(rI, rL);
             }
             va[4] = null;
         } else {
-            va = new MyValue1.ref[10];
+            va = new MyValue1[10];
             for (int i = 0; i < 10; ++i) {
                 va[i] = MyValue1.createWithFieldsInline(rI + i, rL + i);
             }
@@ -205,7 +211,7 @@ public class TestNullableArrays {
 
     @Run(test = "test5")
     public void test5_verifier() {
-        MyValue1.ref[] va = test5(true);
+        MyValue1[] va = test5(true);
         Asserts.assertEQ(va.length, 5);
         Asserts.assertEQ(va[0].hash(), hash(rI, hash()));
         for (int i = 1; i < 4; ++i) {
@@ -224,29 +230,29 @@ public class TestNullableArrays {
     // Test creation of value class array with single element
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
-    public MyValue1.ref test6() {
-        MyValue1.ref[] va = new MyValue1.ref[1];
+    public MyValue1 test6() {
+        MyValue1[] va = new MyValue1[1];
         return va[0];
     }
 
     @Run(test = "test6")
     public void test6_verifier() {
-        MyValue1.ref[] va = new MyValue1.ref[1];
-        MyValue1.ref v = test6();
+        MyValue1[] va = new MyValue1[1];
+        MyValue1 v = test6();
         Asserts.assertEQ(v, null);
     }
 
     // Test default initialization of value class arrays
     @Test
     @IR(failOn = LOAD)
-    public MyValue1.ref[] test7(int len) {
-        return new MyValue1.ref[len];
+    public MyValue1[] test7(int len) {
+        return new MyValue1[len];
     }
 
     @Run(test = "test7")
     public void test7_verifier() {
         int len = Math.abs(rI % 10);
-        MyValue1.ref[] va = test7(len);
+        MyValue1[] va = test7(len);
         for (int i = 0; i < len; ++i) {
             Asserts.assertEQ(va[i], null);
             va[i] = null;
@@ -256,17 +262,17 @@ public class TestNullableArrays {
     // Test creation of value class array with zero length
     @Test
     @IR(failOn = {ALLOC, LOAD, STORE, LOOP, TRAP})
-    public MyValue1.ref[] test8() {
-        return new MyValue1.ref[0];
+    public MyValue1[] test8() {
+        return new MyValue1[0];
     }
 
     @Run(test = "test8")
     public void test8_verifier() {
-        MyValue1.ref[] va = test8();
+        MyValue1[] va = test8();
         Asserts.assertEQ(va.length, 0);
     }
 
-    static MyValue1.ref[] test9_va;
+    static MyValue1[] test9_va;
 
     // Test that value class array loaded from field has correct type
     @Test
@@ -277,7 +283,7 @@ public class TestNullableArrays {
 
     @Run(test = "test9")
     public void test9_verifier() {
-        test9_va = new MyValue1.ref[1];
+        test9_va = new MyValue1[1];
         test9_va[0] = testValue1;
         long result = test9();
         Asserts.assertEQ(result, hash());
@@ -285,8 +291,8 @@ public class TestNullableArrays {
 
     // Multi-dimensional arrays
     @Test
-    public MyValue1.ref[][][] test10(int len1, int len2, int len3) {
-        MyValue1.ref[][][] arr = new MyValue1.ref[len1][len2][len3];
+    public MyValue1[][][] test10(int len1, int len2, int len3) {
+        MyValue1[][][] arr = new MyValue1[len1][len2][len3];
         for (int i = 0; i < len1; i++) {
             for (int j = 0; j < len2; j++) {
                 for (int k = 0; k < len3; k++) {
@@ -302,7 +308,7 @@ public class TestNullableArrays {
 
     @Run(test = "test10")
     public void test10_verifier() {
-        MyValue1.ref[][][] arr = test10(2, 3, 4);
+        MyValue1[][][] arr = test10(2, 3, 4);
         for (int i = 0; i < 2; i++) {
             for (int j = 0; j < 3; j++) {
                 for (int k = 0; k < 4; k++) {
@@ -318,7 +324,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test11(MyValue1.ref[][][] arr, long[] res) {
+    public void test11(MyValue1[][][] arr, long[] res) {
         int l = 0;
         for (int i = 0; i < arr.length; i++) {
             for (int j = 0; j < arr[i].length; j++) {
@@ -335,7 +341,7 @@ public class TestNullableArrays {
 
     @Run(test = "test11")
     public void test11_verifier() {
-        MyValue1.ref[][][] arr = new MyValue1.ref[2][3][4];
+        MyValue1[][][] arr = new MyValue1[2][3][4];
         long[] res = new long[2*3*4];
         long[] verif = new long[2*3*4];
         int l = 0;
@@ -360,7 +366,7 @@ public class TestNullableArrays {
     @Test
     public int test12() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         for (int i = 0; i < arraySize; i++) {
             va[i] = MyValue1.createWithFieldsDontInline(rI + 1, rL);
@@ -382,7 +388,7 @@ public class TestNullableArrays {
     @Test
     public int test13() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         for (int i = 0; i < arraySize; i++) {
             va[i] = MyValue1.createWithFieldsDontInline(rI + i, rL);
@@ -402,14 +408,14 @@ public class TestNullableArrays {
 
     // Array load out of bound not known to compiler (both lower and upper bound)
     @Test
-    public int test14(MyValue1.ref[] va, int index)  {
+    public int test14(MyValue1[] va, int index)  {
         return va[index].x;
     }
 
     @Run(test = "test14")
     public void test14_verifier() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         for (int i = 0; i < arraySize; i++) {
             va[i] = MyValue1.createWithFieldsDontInline(rI, rL);
@@ -430,7 +436,7 @@ public class TestNullableArrays {
     @Test
     public int test15() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         try {
             for (int i = 0; i <= arraySize; i++) {
@@ -451,7 +457,7 @@ public class TestNullableArrays {
     @Test
     public int test16() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         try {
             for (int i = -1; i <= arraySize; i++) {
@@ -470,7 +476,7 @@ public class TestNullableArrays {
 
     // Array store out of bound not known to compiler (both lower and upper bound)
     @Test
-    public int test17(MyValue1.ref[] va, int index, MyValue1 vt)  {
+    public int test17(MyValue1[] va, int index, MyValue1 vt)  {
         va[index] = vt;
         return va[index].x;
     }
@@ -478,7 +484,7 @@ public class TestNullableArrays {
     @Run(test = "test17")
     public void test17_verifier() {
         int arraySize = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[arraySize];
+        MyValue1[] va = new MyValue1[arraySize];
 
         for (int i = 0; i < arraySize; i++) {
             va[i] = MyValue1.createWithFieldsDontInline(rI, rL);
@@ -502,20 +508,20 @@ public class TestNullableArrays {
 
     // clone() as stub call
     @Test
-    public MyValue1.ref[] test18(MyValue1.ref[] va) {
+    public MyValue1[] test18(MyValue1[] va) {
         return va.clone();
     }
 
     @Run(test = "test18")
     public void test18_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va1 = new MyValue1.ref[len];
-        MyValue1[]  va2 = new MyValue1[len];
+        MyValue1[] va1 = new MyValue1[len];
+        MyValue1[]  va2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         for (int i = 1; i < len; ++i) {
             va1[i] = testValue1;
             va2[i] = testValue1;
         }
-        MyValue1.ref[] result1 = test18(va1);
+        MyValue1[] result1 = test18(va1);
         if (len > 0) {
             Asserts.assertEQ(result1[0], null);
         }
@@ -525,14 +531,14 @@ public class TestNullableArrays {
         // make sure we do deopt: GraphKit::new_array assumes an
         // array of references
         for (int j = 0; j < 10; j++) {
-            MyValue1.ref[] result2 = test18(va2);
+            MyValue1[] result2 = test18(va2);
 
             for (int i = 0; i < len; ++i) {
                 Asserts.assertEQ(result2[i].hash(), va2[i].hash());
             }
         }
         if (compile_and_run_again_if_deoptimized(info)) {
-            MyValue1.ref[] result2 = test18(va2);
+            MyValue1[] result2 = test18(va2);
             for (int i = 0; i < len; ++i) {
                 Asserts.assertEQ(result2[i].hash(), va2[i].hash());
             }
@@ -540,11 +546,11 @@ public class TestNullableArrays {
     }
 
     // clone() as series of loads/stores
-    static MyValue1.ref[] test19_orig = null;
+    static MyValue1[] test19_orig = null;
 
     @Test
-    public MyValue1.ref[] test19() {
-        MyValue1.ref[] va = new MyValue1.ref[8];
+    public MyValue1[] test19() {
+        MyValue1[] va = new MyValue1[8];
         for (int i = 1; i < va.length; ++i) {
             va[i] = MyValue1.createWithFieldsInline(rI, rL);
         }
@@ -555,7 +561,7 @@ public class TestNullableArrays {
 
     @Run(test = "test19")
     public void test19_verifier() {
-        MyValue1.ref[] result = test19();
+        MyValue1[] result = test19();
         Asserts.assertEQ(result[0], null);
         for (int i = 1; i < test19_orig.length; ++i) {
             Asserts.assertEQ(result[i].hash(), test19_orig[i].hash());
@@ -564,21 +570,21 @@ public class TestNullableArrays {
 
     // arraycopy() of value class array with oop fields
     @Test
-    public void test20(MyValue1.ref[] src, MyValue1.ref[] dst) {
+    public void test20(MyValue1[] src, MyValue1[] dst) {
         System.arraycopy(src, 0, dst, 0, src.length);
     }
 
     @Run(test = "test20")
     public void test20_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] src1 = new MyValue1.ref[len];
-        MyValue1.ref[] src2 = new MyValue1.ref[len];
-        MyValue1[]  src3 = new MyValue1[len];
-        MyValue1[]  src4 = new MyValue1[len];
-        MyValue1.ref[] dst1 = new MyValue1.ref[len];
-        MyValue1[]  dst2 = new MyValue1[len];
-        MyValue1.ref[] dst3 = new MyValue1.ref[len];
-        MyValue1[]  dst4 = new MyValue1[len];
+        MyValue1[] src1 = new MyValue1[len];
+        MyValue1[] src2 = new MyValue1[len];
+        MyValue1[]  src3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[]  src4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[] dst1 = new MyValue1[len];
+        MyValue1[]  dst2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[] dst3 = new MyValue1[len];
+        MyValue1[]  dst4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         if (len > 0) {
             src2[0] = testValue1;
         }
@@ -608,21 +614,21 @@ public class TestNullableArrays {
 
     // arraycopy() of value class array with no oop field
     @Test
-    public void test21(MyValue2.ref[] src, MyValue2.ref[] dst) {
+    public void test21(MyValue2[] src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, src.length);
     }
 
     @Run(test = "test21")
     public void test21_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue2.ref[] src1 = new MyValue2.ref[len];
-        MyValue2.ref[] src2 = new MyValue2.ref[len];
-        MyValue2[]  src3 = new MyValue2[len];
-        MyValue2[]  src4 = new MyValue2[len];
-        MyValue2.ref[] dst1 = new MyValue2.ref[len];
-        MyValue2[]  dst2 = new MyValue2[len];
-        MyValue2.ref[] dst3 = new MyValue2.ref[len];
-        MyValue2[]  dst4 = new MyValue2[len];
+        MyValue2[] src1 = new MyValue2[len];
+        MyValue2[] src2 = new MyValue2[len];
+        MyValue2[]  src3 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, len);
+        MyValue2[]  src4 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, len);
+        MyValue2[] dst1 = new MyValue2[len];
+        MyValue2[]  dst2 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, len);
+        MyValue2[] dst3 = new MyValue2[len];
+        MyValue2[]  dst4 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, len);
         if (len > 0) {
             src2[0] = MyValue2.createWithFieldsInline(rI, rD);
         }
@@ -653,8 +659,8 @@ public class TestNullableArrays {
     // arraycopy() of value class array with oop field and tightly
     // coupled allocation as dest
     @Test
-    public MyValue1.ref[] test22(MyValue1.ref[] src) {
-        MyValue1.ref[] dst = new MyValue1.ref[src.length];
+    public MyValue1[] test22(MyValue1[] src) {
+        MyValue1[] dst = new MyValue1[src.length];
         System.arraycopy(src, 0, dst, 0, src.length);
         return dst;
     }
@@ -662,14 +668,14 @@ public class TestNullableArrays {
     @Run(test = "test22")
     public void test22_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] src1 = new MyValue1.ref[len];
-        MyValue1[]  src2 = new MyValue1[len];
+        MyValue1[] src1 = new MyValue1[len];
+        MyValue1[]  src2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         for (int i = 1; i < len; ++i) {
             src1[i] = testValue1;
             src2[i] = testValue1;
         }
-        MyValue1.ref[] dst1 = test22(src1);
-        MyValue1.ref[] dst2 = test22(src2);
+        MyValue1[] dst1 = test22(src1);
+        MyValue1[] dst2 = test22(src2);
         if (len > 0) {
             Asserts.assertEQ(dst1[0], null);
             Asserts.assertEQ(dst2[0].hash(), MyValue1.default.hash());
@@ -683,8 +689,8 @@ public class TestNullableArrays {
     // arraycopy() of value class array with oop fields and tightly
     // coupled allocation as dest
     @Test
-    public MyValue1.ref[] test23(MyValue1.ref[] src) {
-        MyValue1.ref[] dst = new MyValue1.ref[src.length + 10];
+    public MyValue1[] test23(MyValue1[] src) {
+        MyValue1[] dst = new MyValue1[src.length + 10];
         System.arraycopy(src, 0, dst, 5, src.length);
         return dst;
     }
@@ -692,14 +698,14 @@ public class TestNullableArrays {
     @Run(test = "test23")
     public void test23_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] src1 = new MyValue1.ref[len];
-        MyValue1[] src2 = new MyValue1[len];
+        MyValue1[] src1 = new MyValue1[len];
+        MyValue1[] src2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         for (int i = 0; i < len; ++i) {
             src1[i] = testValue1;
             src2[i] = testValue1;
         }
-        MyValue1.ref[] dst1 = test23(src1);
-        MyValue1.ref[] dst2 = test23(src2);
+        MyValue1[] dst1 = test23(src1);
+        MyValue1[] dst2 = test23(src2);
         for (int i = 0; i < 5; ++i) {
             Asserts.assertEQ(dst1[i], null);
             Asserts.assertEQ(dst2[i], null);
@@ -712,21 +718,21 @@ public class TestNullableArrays {
 
     // arraycopy() of value class array passed as Object
     @Test
-    public void test24(MyValue1.ref[] src, Object dst) {
+    public void test24(MyValue1[] src, Object dst) {
         System.arraycopy(src, 0, dst, 0, src.length);
     }
 
     @Run(test = "test24")
     public void test24_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] src1 = new MyValue1.ref[len];
-        MyValue1.ref[] src2 = new MyValue1.ref[len];
-        MyValue1[]  src3 = new MyValue1[len];
-        MyValue1[]  src4 = new MyValue1[len];
-        MyValue1.ref[] dst1 = new MyValue1.ref[len];
-        MyValue1[]  dst2 = new MyValue1[len];
-        MyValue1.ref[] dst3 = new MyValue1.ref[len];
-        MyValue1[]  dst4 = new MyValue1[len];
+        MyValue1[] src1 = new MyValue1[len];
+        MyValue1[] src2 = new MyValue1[len];
+        MyValue1[]  src3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[]  src4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[] dst1 = new MyValue1[len];
+        MyValue1[]  dst2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
+        MyValue1[] dst3 = new MyValue1[len];
+        MyValue1[]  dst4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         if (len > 0) {
             src2[0] = testValue1;
         }
@@ -756,20 +762,20 @@ public class TestNullableArrays {
 
     // short arraycopy() with no oop field
     @Test
-    public void test25(MyValue2.ref[] src, MyValue2.ref[] dst) {
+    public void test25(MyValue2[] src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
     @Run(test = "test25")
     public void test25_verifier() {
-        MyValue2.ref[] src1 = new MyValue2.ref[8];
-        MyValue2.ref[] src2 = new MyValue2.ref[8];
-        MyValue2[]  src3 = new MyValue2[8];
-        MyValue2[]  src4 = new MyValue2[8];
-        MyValue2.ref[] dst1 = new MyValue2.ref[8];
-        MyValue2[]  dst2 = new MyValue2[8];
-        MyValue2.ref[] dst3 = new MyValue2.ref[8];
-        MyValue2[]  dst4 = new MyValue2[8];
+        MyValue2[] src1 = new MyValue2[8];
+        MyValue2[] src2 = new MyValue2[8];
+        MyValue2[]  src3 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 8);
+        MyValue2[]  src4 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 8);
+        MyValue2[] dst1 = new MyValue2[8];
+        MyValue2[]  dst2 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 8);
+        MyValue2[] dst3 = new MyValue2[8];
+        MyValue2[]  dst4 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 8);
         src2[0] = MyValue2.createWithFieldsInline(rI, rD);
         for (int i = 1; i < 8; ++i) {
             src1[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
@@ -795,20 +801,20 @@ public class TestNullableArrays {
 
     // short arraycopy() with oop fields
     @Test
-    public void test26(MyValue1.ref[] src, MyValue1.ref[] dst) {
+    public void test26(MyValue1[] src, MyValue1[] dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
     @Run(test = "test26")
     public void test26_verifier() {
-        MyValue1.ref[] src1 = new MyValue1.ref[8];
-        MyValue1.ref[] src2 = new MyValue1.ref[8];
-        MyValue1[]  src3 = new MyValue1[8];
-        MyValue1[]  src4 = new MyValue1[8];
-        MyValue1.ref[] dst1 = new MyValue1.ref[8];
-        MyValue1[]  dst2 = new MyValue1[8];
-        MyValue1.ref[] dst3 = new MyValue1.ref[8];
-        MyValue1[]  dst4 = new MyValue1[8];
+        MyValue1[] src1 = new MyValue1[8];
+        MyValue1[] src2 = new MyValue1[8];
+        MyValue1[]  src3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[]  src4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[] dst1 = new MyValue1[8];
+        MyValue1[]  dst2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[] dst3 = new MyValue1[8];
+        MyValue1[]  dst4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
         src2[0] = testValue1;
         for (int i = 1; i < 8; ++i) {
             src1[i] = testValue1;
@@ -834,20 +840,20 @@ public class TestNullableArrays {
 
     // short arraycopy() with oop fields and offsets
     @Test
-    public void test27(MyValue1.ref[] src, MyValue1.ref[] dst) {
+    public void test27(MyValue1[] src, MyValue1[] dst) {
         System.arraycopy(src, 1, dst, 2, 6);
     }
 
     @Run(test = "test27")
     public void test27_verifier() {
-        MyValue1.ref[] src1 = new MyValue1.ref[8];
-        MyValue1.ref[] src2 = new MyValue1.ref[8];
-        MyValue1[]  src3 = new MyValue1[8];
-        MyValue1[]  src4 = new MyValue1[8];
-        MyValue1.ref[] dst1 = new MyValue1.ref[8];
-        MyValue1[]  dst2 = new MyValue1[8];
-        MyValue1.ref[] dst3 = new MyValue1.ref[8];
-        MyValue1[]  dst4 = new MyValue1[8];
+        MyValue1[] src1 = new MyValue1[8];
+        MyValue1[] src2 = new MyValue1[8];
+        MyValue1[]  src3 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[]  src4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[] dst1 = new MyValue1[8];
+        MyValue1[]  dst2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
+        MyValue1[] dst3 = new MyValue1[8];
+        MyValue1[]  dst4 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
         for (int i = 1; i < 8; ++i) {
             src1[i] = testValue1;
             src2[i] = testValue1;
@@ -877,17 +883,17 @@ public class TestNullableArrays {
     @Test
     @IR(applyIf = {"UseZGC", "false"},
         failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
-    public MyValue2.ref test28() {
-        MyValue2.ref[] src = new MyValue2.ref[10];
+    public MyValue2 test28() {
+        MyValue2[] src = new MyValue2[10];
         src[0] = null;
-        MyValue2.ref[] dst = (MyValue2.ref[])src.clone();
+        MyValue2[] dst = (MyValue2[])src.clone();
         return dst[0];
     }
 
     @Run(test = "test28")
     public void test28_verifier() {
         MyValue2 v = MyValue2.createWithFieldsInline(rI, rD);
-        MyValue2.ref result = test28();
+        MyValue2 result = test28();
         Asserts.assertEQ(result, null);
     }
 
@@ -895,21 +901,21 @@ public class TestNullableArrays {
     // TODO 8227588: shouldn't this have the same IR matching rules as test6?
     @Test
     @IR(failOn = {ALLOCA, LOOP, TRAP})
-    public MyValue2.ref test29(MyValue2.ref[] src) {
-        MyValue2.ref[] dst = new MyValue2.ref[10];
+    public MyValue2 test29(MyValue2[] src) {
+        MyValue2[] dst = new MyValue2[10];
         System.arraycopy(src, 0, dst, 0, 10);
         return dst[0];
     }
 
     @Run(test = "test29")
     public void test29_verifier(RunInfo info) {
-        MyValue2.ref[] src1 = new MyValue2.ref[10];
-        MyValue2.val[] src2 = new MyValue2.val[10];
+        MyValue2[] src1 = new MyValue2[10];
+        MyValue2[] src2 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 10);
         for (int i = 0; i < 10; ++i) {
             src1[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
             src2[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
-        MyValue2.ref v = test29(src1);
+        MyValue2 v = test29(src1);
         Asserts.assertEQ(src1[0].hash(), v.hash());
         if (!info.isWarmUp()) {
             v = test29(src2);
@@ -920,8 +926,8 @@ public class TestNullableArrays {
     // non escaping allocation with uncommon trap that needs
     // eliminated value class array element as debug info
     @Test
-    public MyValue2.ref test30(MyValue2.ref[] src, boolean flag) {
-        MyValue2.ref[] dst = new MyValue2.ref[10];
+    public MyValue2 test30(MyValue2[] src, boolean flag) {
+        MyValue2[] dst = new MyValue2[10];
         System.arraycopy(src, 0, dst, 0, 10);
         if (flag) { }
         return dst[0];
@@ -930,13 +936,13 @@ public class TestNullableArrays {
     @Run(test = "test30")
     @Warmup(10000)
     public void test30_verifier(RunInfo info) {
-        MyValue2.ref[] src1 = new MyValue2.ref[10];
-        MyValue2.val[] src2 = new MyValue2.val[10];
+        MyValue2[] src1 = new MyValue2[10];
+        MyValue2[] src2 = (MyValue2[])ValueClass.newNullRestrictedArray(MyValue2.class, 10);
         for (int i = 0; i < 10; ++i) {
             src1[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
             src2[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
-        MyValue2.ref v = test30(src1, !info.isWarmUp());
+        MyValue2 v = test30(src1, !info.isWarmUp());
         Asserts.assertEQ(src1[0].hash(), v.hash());
         if (!info.isWarmUp()) {
             v = test30(src2, true);
@@ -949,7 +955,7 @@ public class TestNullableArrays {
     // TODO 8227588
     // @Test(failOn = ALLOC + ALLOCA + LOOP + LOAD + STORE + TRAP)
     public long test31(boolean b, boolean deopt, Method m) {
-        MyValue2.ref[] src = new MyValue2.ref[1];
+        MyValue2[] src = new MyValue2[1];
         if (b) {
             src[0] = MyValue2.createWithFieldsInline(rI, rD);
         } else {
@@ -982,14 +988,14 @@ public class TestNullableArrays {
     @Run(test = "test32")
     public void test32_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va1 = new MyValue1.ref[len];
-        MyValue1[] va2 = new MyValue1[len];
+        MyValue1[] va1 = new MyValue1[len];
+        MyValue1[] va2 = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, len);
         for (int i = 1; i < len; ++i) {
             va1[i] = testValue1;
             va2[i] = testValue1;
         }
-        MyValue1.ref[] result1 = (MyValue1.ref[])test32(va1);
-        MyValue1.ref[] result2 = (MyValue1.ref[])test32(va2);
+        MyValue1[] result1 = (MyValue1[])test32(va1);
+        MyValue1[] result2 = (MyValue1[])test32(va2);
         if (len > 0) {
             Asserts.assertEQ(result1[0], null);
             Asserts.assertEQ(result2[0].hash(), MyValue1.default.hash());
@@ -1025,7 +1031,7 @@ public class TestNullableArrays {
     public Object[] test34_helper(boolean flag) {
         Object[] va = null;
         if (flag) {
-            va = new MyValue1.ref[8];
+            va = new MyValue1[8];
             for (int i = 0; i < va.length; ++i) {
                 va[i] = MyValue1.createWithFieldsDontInline(rI, rL);
             }
@@ -1065,7 +1071,7 @@ public class TestNullableArrays {
         }
     }
 
-    static void verify(MyValue1.ref[] src, MyValue1.ref[] dst) {
+    static void verify(MyValue1[] src, MyValue1[] dst) {
         for (int i = 0; i < src.length; ++i) {
             if (src[i] != null) {
                 Asserts.assertEQ(src[i].hash(), dst[i].hash());
@@ -1075,7 +1081,7 @@ public class TestNullableArrays {
         }
     }
 
-    static void verify(MyValue1.ref[] src, Object[] dst) {
+    static void verify(MyValue1[] src, Object[] dst) {
         for (int i = 0; i < src.length; ++i) {
             if (src[i] != null) {
                 Asserts.assertEQ(src[i].hash(), ((MyInterface)dst[i]).hash());
@@ -1085,7 +1091,7 @@ public class TestNullableArrays {
         }
     }
 
-    static void verify(MyValue2.ref[] src, MyValue2.ref[] dst) {
+    static void verify(MyValue2[] src, MyValue2[] dst) {
         for (int i = 0; i < src.length; ++i) {
             if (src[i] != null) {
                 Asserts.assertEQ(src[i].hash(), dst[i].hash());
@@ -1095,7 +1101,7 @@ public class TestNullableArrays {
         }
     }
 
-    static void verify(MyValue2.ref[] src, Object[] dst) {
+    static void verify(MyValue2[] src, Object[] dst) {
         for (int i = 0; i < src.length; ++i) {
             if (src[i] != null) {
                 Asserts.assertEQ(src[i].hash(), ((MyInterface)dst[i]).hash());
@@ -1124,8 +1130,8 @@ public class TestNullableArrays {
     @Run(test = "test35")
     public void test35_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] src = new MyValue1.ref[len];
-        MyValue1.ref[] dst = new MyValue1.ref[len];
+        MyValue1[] src = new MyValue1[len];
+        MyValue1[] dst = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             src[i] = testValue1;
         }
@@ -1138,15 +1144,15 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test36(Object src, MyValue2.ref[] dst) {
+    public void test36(Object src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, dst.length);
     }
 
     @Run(test = "test36")
     public void test36_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue2.ref[] src = new MyValue2.ref[len];
-        MyValue2.ref[] dst = new MyValue2.ref[len];
+        MyValue2[] src = new MyValue2[len];
+        MyValue2[] dst = new MyValue2[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1159,15 +1165,15 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test37(MyValue2.ref[] src, Object dst) {
+    public void test37(MyValue2[] src, Object dst) {
         System.arraycopy(src, 0, dst, 0, src.length);
     }
 
     @Run(test = "test37")
     public void test37_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue2.ref[] src = new MyValue2.ref[len];
-        MyValue2.ref[] dst = new MyValue2.ref[len];
+        MyValue2[] src = new MyValue2[len];
+        MyValue2[] dst = new MyValue2[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1180,7 +1186,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test38(Object src, MyValue2.ref[] dst) {
+    public void test38(Object src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, dst.length);
     }
 
@@ -1189,7 +1195,7 @@ public class TestNullableArrays {
     public void test38_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
         Object[] src = new Object[len];
-        MyValue2.ref[] dst = new MyValue2.ref[len];
+        MyValue2[] dst = new MyValue2[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1206,14 +1212,14 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test39(MyValue2.ref[] src, Object dst) {
+    public void test39(MyValue2[] src, Object dst) {
         System.arraycopy(src, 0, dst, 0, src.length);
     }
 
     @Run(test = "test39")
     public void test39_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue2.ref[] src = new MyValue2.ref[len];
+        MyValue2[] src = new MyValue2[len];
         Object[] dst = new Object[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
@@ -1236,7 +1242,7 @@ public class TestNullableArrays {
     public void test40_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
         Object[] src = new Object[len];
-        MyValue2.ref[] dst = new MyValue2.ref[len];
+        MyValue2[] dst = new MyValue2[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1260,7 +1266,7 @@ public class TestNullableArrays {
     @Run(test = "test41")
     public void test41_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue2.ref[] src = new MyValue2.ref[len];
+        MyValue2[] src = new MyValue2[len];
         Object[] dst = new Object[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
@@ -1302,8 +1308,8 @@ public class TestNullableArrays {
 
     @Run(test = "test43")
     public void test43_verifier(RunInfo info) {
-        MyValue1.ref[] src = new MyValue1.ref[8];
-        MyValue1.ref[] dst = new MyValue1.ref[8];
+        MyValue1[] src = new MyValue1[8];
+        MyValue1[] dst = new MyValue1[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = testValue1;
         }
@@ -1316,14 +1322,14 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test44(Object src, MyValue2.ref[] dst) {
+    public void test44(Object src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
     @Run(test = "test44")
     public void test44_verifier(RunInfo info) {
-        MyValue2.ref[] src = new MyValue2.ref[8];
-        MyValue2.ref[] dst = new MyValue2.ref[8];
+        MyValue2[] src = new MyValue2[8];
+        MyValue2[] dst = new MyValue2[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1336,14 +1342,14 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test45(MyValue2.ref[] src, Object dst) {
+    public void test45(MyValue2[] src, Object dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
     @Run(test = "test45")
     public void test45_verifier(RunInfo info) {
-        MyValue2.ref[] src = new MyValue2.ref[8];
-        MyValue2.ref[] dst = new MyValue2.ref[8];
+        MyValue2[] src = new MyValue2[8];
+        MyValue2[] dst = new MyValue2[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1356,7 +1362,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test46(Object[] src, MyValue2.ref[] dst) {
+    public void test46(Object[] src, MyValue2[] dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
@@ -1364,7 +1370,7 @@ public class TestNullableArrays {
     @Warmup(1) // Avoid early compilation
     public void test46_verifier(RunInfo info) {
         Object[] src = new Object[8];
-        MyValue2.ref[] dst = new MyValue2.ref[8];
+        MyValue2[] dst = new MyValue2[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1381,13 +1387,13 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test47(MyValue2.ref[] src, Object[] dst) {
+    public void test47(MyValue2[] src, Object[] dst) {
         System.arraycopy(src, 0, dst, 0, 8);
     }
 
     @Run(test = "test47")
     public void test47_verifier(RunInfo info) {
-        MyValue2.ref[] src = new MyValue2.ref[8];
+        MyValue2[] src = new MyValue2[8];
         Object[] dst = new Object[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
@@ -1409,7 +1415,7 @@ public class TestNullableArrays {
     @Warmup(1) // Avoid early compilation
     public void test48_verifier(RunInfo info) {
         Object[] src = new Object[8];
-        MyValue2.ref[] dst = new MyValue2.ref[8];
+        MyValue2[] dst = new MyValue2[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
         }
@@ -1432,7 +1438,7 @@ public class TestNullableArrays {
 
     @Run(test = "test49")
     public void test49_verifier(RunInfo info) {
-        MyValue2.ref[] src = new MyValue2.ref[8];
+        MyValue2[] src = new MyValue2[8];
         Object[] dst = new Object[8];
         for (int i = 1; i < 8; ++i) {
             src[i] = MyValue2.createWithFieldsInline(rI+i, rD+i);
@@ -1466,26 +1472,26 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref[] test51(MyValue1.ref[] va) {
-        return Arrays.copyOf(va, va.length, MyValue1.ref[].class);
+    public MyValue1[] test51(MyValue1[] va) {
+        return Arrays.copyOf(va, va.length, MyValue1[].class);
     }
 
     @Run(test = "test51")
     public void test51_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
-        MyValue1.ref[] result = test51(va);
+        MyValue1[] result = test51(va);
         verify(va, result);
     }
 
-    static final MyValue1.ref[] test52_va = new MyValue1.ref[8];
+    static final MyValue1[] test52_va = new MyValue1[8];
 
     @Test
-    public MyValue1.ref[] test52() {
-        return Arrays.copyOf(test52_va, 8, MyValue1.ref[].class);
+    public MyValue1[] test52() {
+        return Arrays.copyOf(test52_va, 8, MyValue1[].class);
     }
 
     @Run(test = "test52")
@@ -1493,35 +1499,35 @@ public class TestNullableArrays {
         for (int i = 1; i < 8; ++i) {
             test52_va[i] = testValue1;
         }
-        MyValue1.ref[] result = test52();
+        MyValue1[] result = test52();
         verify(test52_va, result);
     }
 
     @Test
-    public MyValue1.ref[] test53(Object[] va) {
-        return Arrays.copyOf(va, va.length, MyValue1.ref[].class);
+    public MyValue1[] test53(Object[] va) {
+        return Arrays.copyOf(va, va.length, MyValue1[].class);
     }
 
     @Run(test = "test53")
     public void test53_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
-        MyValue1.ref[] result = test53(va);
+        MyValue1[] result = test53(va);
         verify(result, va);
     }
 
     @Test
-    public Object[] test54(MyValue1.ref[] va) {
+    public Object[] test54(MyValue1[] va) {
         return Arrays.copyOf(va, va.length, Object[].class);
     }
 
     @Run(test = "test54")
     public void test54_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
@@ -1537,7 +1543,7 @@ public class TestNullableArrays {
     @Run(test = "test55")
     public void test55_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
@@ -1546,8 +1552,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref[] test56(Object[] va) {
-        return Arrays.copyOf(va, va.length, MyValue1.ref[].class);
+    public MyValue1[] test56(Object[] va) {
+        return Arrays.copyOf(va, va.length, MyValue1[].class);
     }
 
     @Run(test = "test56")
@@ -1557,7 +1563,7 @@ public class TestNullableArrays {
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
-        MyValue1.ref[] result = test56(va);
+        MyValue1[] result = test56(va);
         verify(result, va);
     }
 
@@ -1569,46 +1575,46 @@ public class TestNullableArrays {
     @Run(test = "test57")
     public void test57_verifier() {
         int len = Math.abs(rI) % 10;
-        Object[] va = new MyValue1.ref[len];
+        Object[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
-        Object[] result = test57(va, MyValue1.ref[].class);
+        Object[] result = test57(va, MyValue1[].class);
         verify(va, result);
     }
 
     @Test
-    public Object[] test58(MyValue1.ref[] va, Class klass) {
+    public Object[] test58(MyValue1[] va, Class klass) {
         return Arrays.copyOf(va, va.length, klass);
     }
 
     @Run(test = "test58")
     public void test58_verifier(RunInfo info) {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
         }
         for (int i = 1; i < 10; i++) {
-            Object[] result = test58(va, MyValue1.ref[].class);
+            Object[] result = test58(va, MyValue1[].class);
             verify(va, result);
         }
         if (compile_and_run_again_if_deoptimized(info)) {
-            Object[] result = test58(va, MyValue1.ref[].class);
+            Object[] result = test58(va, MyValue1[].class);
             verify(va, result);
         }
     }
 
     @Test
-    public Object[] test59(MyValue1.ref[] va) {
-        return Arrays.copyOf(va, va.length+1, MyValue1.ref[].class);
+    public Object[] test59(MyValue1[] va) {
+        return Arrays.copyOf(va, va.length+1, MyValue1[].class);
     }
 
     @Run(test = "test59")
     public void test59_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
-        MyValue1.ref[] verif = new MyValue1.ref[len+1];
+        MyValue1[] va = new MyValue1[len];
+        MyValue1[] verif = new MyValue1[len+1];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
             verif[i] = va[i];
@@ -1625,13 +1631,13 @@ public class TestNullableArrays {
     @Run(test = "test60")
     public void test60_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
-        MyValue1.ref[] verif = new MyValue1.ref[len+1];
+        MyValue1[] va = new MyValue1[len];
+        MyValue1[] verif = new MyValue1[len+1];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
             verif[i] = (MyValue1)va[i];
         }
-        Object[] result = test60(va, MyValue1.ref[].class);
+        Object[] result = test60(va, MyValue1[].class);
         verify(verif, result);
     }
 
@@ -1654,7 +1660,7 @@ public class TestNullableArrays {
     }
 
     @ForceInline
-    public Object[] test62_helper(int i, MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test62_helper(int i, MyValue1[] va, Integer[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = oa;
@@ -1665,7 +1671,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public Object[] test62(MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test62(MyValue1[] va, Integer[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1677,7 +1683,7 @@ public class TestNullableArrays {
     @Run(test = "test62")
     public void test62_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         Integer[] oa = new Integer[len];
         for (int i = 1; i < len; ++i) {
             oa[i] = Integer.valueOf(rI);
@@ -1690,7 +1696,7 @@ public class TestNullableArrays {
     }
 
     @ForceInline
-    public Object[] test63_helper(int i, MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test63_helper(int i, MyValue1[] va, Integer[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = va;
@@ -1701,7 +1707,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public Object[] test63(MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test63(MyValue1[] va, Integer[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1713,8 +1719,8 @@ public class TestNullableArrays {
     @Run(test = "test63")
     public void test63_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
-        MyValue1.ref[] verif = new MyValue1.ref[len+1];
+        MyValue1[] va = new MyValue1[len];
+        MyValue1[] verif = new MyValue1[len+1];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
             verif[i] = va[i];
@@ -1727,13 +1733,13 @@ public class TestNullableArrays {
 
     // Test default initialization of value class arrays: small array
     @Test
-    public MyValue1.ref[] test64() {
-        return new MyValue1.ref[8];
+    public MyValue1[] test64() {
+        return new MyValue1[8];
     }
 
     @Run(test = "test64")
     public void test64_verifier() {
-        MyValue1.ref[] va = test64();
+        MyValue1[] va = test64();
         for (int i = 0; i < 8; ++i) {
             Asserts.assertEQ(va[i], null);
         }
@@ -1741,13 +1747,13 @@ public class TestNullableArrays {
 
     // Test default initialization of value class arrays: large array
     @Test
-    public MyValue1.ref[] test65() {
-        return new MyValue1.ref[32];
+    public MyValue1[] test65() {
+        return new MyValue1[32];
     }
 
     @Run(test = "test65")
     public void test65_verifier() {
-        MyValue1.ref[] va = test65();
+        MyValue1[] va = test65();
         for (int i = 0; i < 32; ++i) {
             Asserts.assertEQ(va[i], null);
         }
@@ -1756,31 +1762,31 @@ public class TestNullableArrays {
     // Check init store elimination
     @Test
     @IR(counts = {ALLOCA, "= 1"})
-    public MyValue1.ref[] test66(MyValue1.ref vt) {
-        MyValue1.ref[] va = new MyValue1.ref[1];
+    public MyValue1[] test66(MyValue1 vt) {
+        MyValue1[] va = new MyValue1[1];
         va[0] = vt;
         return va;
     }
 
     @Run(test = "test66")
     public void test66_verifier() {
-        MyValue1.ref vt = MyValue1.createWithFieldsDontInline(rI, rL);
-        MyValue1.ref[] va = test66(vt);
+        MyValue1 vt = MyValue1.createWithFieldsDontInline(rI, rL);
+        MyValue1[] va = test66(vt);
         Asserts.assertEQ(va[0].hashPrimitive(), vt.hashPrimitive());
     }
 
     // Zeroing elimination and arraycopy
     @Test
-    public MyValue1.ref[] test67(MyValue1.ref[] src) {
-        MyValue1.ref[] dst = new MyValue1.ref[16];
+    public MyValue1[] test67(MyValue1[] src) {
+        MyValue1[] dst = new MyValue1[16];
         System.arraycopy(src, 0, dst, 0, 13);
         return dst;
     }
 
     @Run(test = "test67")
     public void test67_verifier() {
-        MyValue1.ref[] va = new MyValue1.ref[16];
-        MyValue1.ref[] var = test67(va);
+        MyValue1[] va = new MyValue1[16];
+        MyValue1[] var = test67(va);
         for (int i = 0; i < 16; ++i) {
             Asserts.assertEQ(var[i], null);
         }
@@ -1788,15 +1794,15 @@ public class TestNullableArrays {
 
     // A store with a default value can be eliminated
     @Test
-    public MyValue1.ref[] test68() {
-        MyValue1.ref[] va = new MyValue1.ref[2];
+    public MyValue1[] test68() {
+        MyValue1[] va = new MyValue1[2];
         va[0] = va[1];
         return va;
     }
 
     @Run(test = "test68")
     public void test68_verifier() {
-        MyValue1.ref[] va = test68();
+        MyValue1[] va = test68();
         for (int i = 0; i < 2; ++i) {
             Asserts.assertEQ(va[i], null);
         }
@@ -1804,8 +1810,8 @@ public class TestNullableArrays {
 
     // Requires individual stores to init array
     @Test
-    public MyValue1.ref[] test69(MyValue1.ref vt) {
-        MyValue1.ref[] va = new MyValue1.ref[4];
+    public MyValue1[] test69(MyValue1 vt) {
+        MyValue1[] va = new MyValue1[4];
         va[0] = vt;
         va[3] = vt;
         return va;
@@ -1813,11 +1819,11 @@ public class TestNullableArrays {
 
     @Run(test = "test69")
     public void test69_verifier() {
-        MyValue1.ref vt = MyValue1.createWithFieldsDontInline(rI, rL);
-        MyValue1.ref[] va = new MyValue1.ref[4];
+        MyValue1 vt = MyValue1.createWithFieldsDontInline(rI, rL);
+        MyValue1[] va = new MyValue1[4];
         va[0] = vt;
         va[3] = vt;
-        MyValue1.ref[] var = test69(vt);
+        MyValue1[] var = test69(vt);
         for (int i = 0; i < va.length; ++i) {
             Asserts.assertEQ(va[i], var[i]);
         }
@@ -1826,9 +1832,9 @@ public class TestNullableArrays {
     // A store with a default value can be eliminated: same as test68
     // but store is farther away from allocation
     @Test
-    public MyValue1.ref[] test70(MyValue1.ref[] other) {
+    public MyValue1[] test70(MyValue1[] other) {
         other[1] = other[0];
-        MyValue1.ref[] va = new MyValue1.ref[2];
+        MyValue1[] va = new MyValue1[2];
         other[0] = va[1];
         va[0] = va[1];
         return va;
@@ -1836,8 +1842,8 @@ public class TestNullableArrays {
 
     @Run(test = "test70")
     public void test70_verifier() {
-        MyValue1.ref[] va = new MyValue1.ref[2];
-        MyValue1.ref[] var = test70(va);
+        MyValue1[] va = new MyValue1[2];
+        MyValue1[] var = test70(va);
         for (int i = 0; i < 2; ++i) {
             Asserts.assertEQ(va[i], var[i]);
         }
@@ -1847,8 +1853,8 @@ public class TestNullableArrays {
     @Test
     public void test71() {
         int len = 10;
-        MyValue2.ref[] src = new MyValue2.ref[len];
-        MyValue2.ref[] dst = new MyValue2.ref[len];
+        MyValue2[] src = new MyValue2[len];
+        MyValue2[] dst = new MyValue2[len];
         for (int i = 1; i < len; ++i) {
             src[i] = MyValue2.createWithFieldsDontInline(rI+i, rD+i);
         }
@@ -1888,7 +1894,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public void test73(Object[] oa, MyValue1.ref v, Object o) {
+    public void test73(Object[] oa, MyValue1 v, Object o) {
         // TestLWorld.test38 use a C1 Phi node for the array. This test
         // adds the case where the stored value is a C1 Phi node.
         Object o2 = (o == null) ? v : o;
@@ -1900,9 +1906,9 @@ public class TestNullableArrays {
 
     @Run(test = "test73")
     public void test73_verifier() {
-        MyValue1.ref v0 = MyValue1.createWithFieldsDontInline(rI, rL);
-        MyValue1.ref v1 = MyValue1.createWithFieldsDontInline(rI+1, rL+1);
-        MyValue1.ref[] arr = new MyValue1.ref[3];
+        MyValue1 v0 = MyValue1.createWithFieldsDontInline(rI, rL);
+        MyValue1 v1 = MyValue1.createWithFieldsDontInline(rI+1, rL+1);
+        MyValue1[] arr = new MyValue1[3];
         try {
             test73(arr, v0, v1);
             throw new RuntimeException("ArrayStoreException expected");
@@ -1916,7 +1922,7 @@ public class TestNullableArrays {
 
     // Some more array clone tests
     @ForceInline
-    public Object[] test74_helper(int i, MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test74_helper(int i, MyValue1[] va, Integer[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = oa;
@@ -1927,7 +1933,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public Object[] test74(MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test74(MyValue1[] va, Integer[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1938,7 +1944,7 @@ public class TestNullableArrays {
     @Run(test = "test74")
     public void test74_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
         Integer[] oa = new Integer[len];
         for (int i = 1; i < len; ++i) {
             oa[i] = Integer.valueOf(rI);
@@ -1954,7 +1960,7 @@ public class TestNullableArrays {
     }
 
     @ForceInline
-    public Object[] test75_helper(int i, MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test75_helper(int i, MyValue1[] va, Integer[] oa) {
         Object[] arr = null;
         if (i == 10) {
             arr = va;
@@ -1965,7 +1971,7 @@ public class TestNullableArrays {
     }
 
     @Test
-    public Object[] test75(MyValue1.ref[] va, Integer[] oa) {
+    public Object[] test75(MyValue1[] va, Integer[] oa) {
         int i = 0;
         for (; i < 10; i++);
 
@@ -1976,8 +1982,8 @@ public class TestNullableArrays {
     @Run(test = "test75")
     public void test75_verifier() {
         int len = Math.abs(rI) % 10;
-        MyValue1.ref[] va = new MyValue1.ref[len];
-        MyValue1.ref[] verif = new MyValue1.ref[len];
+        MyValue1[] va = new MyValue1[len];
+        MyValue1[] verif = new MyValue1[len];
         for (int i = 1; i < len; ++i) {
             va[i] = testValue1;
             verif[i] = va[i];
@@ -1994,16 +2000,16 @@ public class TestNullableArrays {
 
     // Test mixing nullable and non-nullable arrays
     @Test
-    public Object[] test76(MyValue1[] vva, MyValue1.ref[] vba, MyValue1 vt, Object[] out, int n) {
+    public Object[] test76(MyValue1[] vva, MyValue1[] vba, MyValue1 vt, Object[] out, int n) {
         Object[] result = null;
         if (n == 0) {
             result = vva;
         } else if (n == 1) {
             result = vba;
         } else if (n == 2) {
-            result = new MyValue1[42];
+            result = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
         } else if (n == 3) {
-            result = new MyValue1.ref[42];
+            result = new MyValue1[42];
         }
         result[0] = vt;
         out[0] = result[1];
@@ -2014,11 +2020,11 @@ public class TestNullableArrays {
     public void test76_verifier() {
         MyValue1 vt = testValue1;
         Object[] out = new Object[1];
-        MyValue1[] vva = new MyValue1[42];
-        MyValue1[] vva_r = new MyValue1[42];
+        MyValue1[] vva = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
+        MyValue1[] vva_r = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
         vva_r[0] = vt;
-        MyValue1.ref[] vba = new MyValue1.ref[42];
-        MyValue1.ref[] vba_r = new MyValue1.ref[42];
+        MyValue1[] vba = new MyValue1[42];
+        MyValue1[] vba_r = new MyValue1[42];
         vba_r[0] = vt;
         Object[] result = test76(vva, vba, vt, out, 0);
         verify(result, vva_r);
@@ -2038,12 +2044,12 @@ public class TestNullableArrays {
     public Object[] test77(boolean b) {
         Object[] va;
         if (b) {
-            va = new MyValue1.ref[5];
+            va = new MyValue1[5];
             for (int i = 0; i < 5; ++i) {
                 va[i] = testValue1;
             }
         } else {
-            va = new MyValue1[10];
+            va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 10);
             for (int i = 0; i < 10; ++i) {
                 va[i] = MyValue1.createWithFieldsInline(rI + i, rL + i);
             }
@@ -2075,16 +2081,16 @@ public class TestNullableArrays {
 
     // Same as test76 but with non value class array cases
     @Test
-    public Object[] test78(MyValue1[] vva, MyValue1.ref[] vba, Object val, Object[] out, int n) {
+    public Object[] test78(MyValue1[] vva, MyValue1[] vba, Object val, Object[] out, int n) {
         Object[] result = null;
         if (n == 0) {
             result = vva;
         } else if (n == 1) {
             result = vba;
         } else if (n == 2) {
-            result = new MyValue1[42];
+            result = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
         } else if (n == 3) {
-            result = new MyValue1.ref[42];
+            result = new MyValue1[42];
         } else if (n == 4) {
             result = new Integer[42];
         }
@@ -2098,11 +2104,11 @@ public class TestNullableArrays {
         MyValue1 vt = testValue1;
         Integer i = Integer.valueOf(42);
         Object[] out = new Object[1];
-        MyValue1[] vva = new MyValue1[42];
-        MyValue1[] vva_r = new MyValue1[42];
+        MyValue1[] vva = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
+        MyValue1[] vva_r = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
         vva_r[0] = vt;
-        MyValue1.ref[] vba = new MyValue1.ref[42];
-        MyValue1.ref[] vba_r = new MyValue1.ref[42];
+        MyValue1[] vba = new MyValue1[42];
+        MyValue1[] vba_r = new MyValue1[42];
         vba_r[0] = vt;
         Object[] result = test78(vva, vba, vt, out, 0);
         verify(result, vva_r);
@@ -2124,15 +2130,15 @@ public class TestNullableArrays {
     // Test widening conversions from [Q to [L
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
-    public static MyValue1.ref[] test79(MyValue1[] va) {
+    public static MyValue1[] test79(MyValue1[] va) {
         return va;
     }
 
     @Run(test = "test79")
     public void test79_verifier() {
-        MyValue1[] va = new MyValue1[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         va[0] = testValue1;
-        MyValue1.ref[] res = test79(va);
+        MyValue1[] res = test79(va);
         Asserts.assertEquals(res[0].hash(), testValue1.hash());
         try {
             res[0] = null;
@@ -2148,12 +2154,12 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
     public static Object[] test80(MyValue1[] va) {
-        return (MyValue1.ref[])va;
+        return (MyValue1[])va;
     }
 
     @Run(test = "test80")
     public void test80_verifier() {
-        MyValue1[] va = new MyValue1[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         va[0] = testValue1;
         Object[] res = test80(va);
         Asserts.assertEquals(((MyValue1)res[0]).hash(), testValue1.hash());
@@ -2169,8 +2175,8 @@ public class TestNullableArrays {
 
     // Test mixing widened and boxed array type
     @Test
-    public static long test81(MyValue1[] va1, MyValue1.ref[] va2, MyValue1 vt, boolean b, boolean shouldThrow) {
-        MyValue1.ref[] result = b ? va1 : va2;
+    public static long test81(MyValue1[] va1, MyValue1[] va2, MyValue1 vt, boolean b, boolean shouldThrow) {
+        MyValue1[] result = b ? va1 : va2;
         try {
             result[0] = vt;
         } catch (NullPointerException npe) {
@@ -2181,8 +2187,8 @@ public class TestNullableArrays {
 
     @Run(test = "test81")
     public void test81_verifier() {
-        MyValue1[] va = new MyValue1[2];
-        MyValue1.ref[] vaB = new MyValue1.ref[2];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vaB = new MyValue1[2];
         va[1] = testValue1;
         vaB[1] = testValue1;
         long res = test81(va, vaB, testValue1, true, true);
@@ -2198,17 +2204,17 @@ public class TestNullableArrays {
 
     // Same as test81 but more cases and null writes
     @Test
-    public static long test82(MyValue1[] va1, MyValue1.ref[] va2, MyValue1 vt1, MyValue1.ref vt2, int i, boolean shouldThrow) {
-        MyValue1.ref[] result = null;
+    public static long test82(MyValue1[] va1, MyValue1[] va2, MyValue1 vt1, MyValue1 vt2, int i, boolean shouldThrow) {
+        MyValue1[] result = null;
         if (i == 0) {
             result = va1;
         } else if (i == 1) {
             result = va2;
         } else if (i == 2) {
-            result = new MyValue1.ref[2];
+            result = new MyValue1[2];
             result[1] = vt1;
         } else if (i == 3) {
-            result = new MyValue1[2];
+            result = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
             result[1] = vt1;
         }
         try {
@@ -2225,8 +2231,8 @@ public class TestNullableArrays {
 
     @Run(test = "test82")
     public void test82_verifier() {
-        MyValue1[] va = new MyValue1[2];
-        MyValue1.ref[] vaB = new MyValue1.ref[2];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vaB = new MyValue1[2];
         va[1] = testValue1;
         vaB[1] = testValue1;
         long res = test82(va, vaB, testValue1, testValue1, 0, true);
@@ -2249,13 +2255,13 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC, ALLOCA, STORE})
     public static long test83(MyValue1[] va) {
-        MyValue1.ref[] result = va;
+        MyValue1[] result = va;
         return result[0].hash();
     }
 
     @Run(test = "test83")
     public void test83_verifier() {
-        MyValue1[] va = new MyValue1[42];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 42);
         va[0] = testValue1;
         long res = test83(va);
         Asserts.assertEquals(res, testValue1.hash());
@@ -2264,8 +2270,8 @@ public class TestNullableArrays {
     @Test
     @IR(applyIf = {"FlatArrayElementMaxSize", "= -1"},
         failOn = {ALLOC, LOOP, STORE, TRAP})
-    public static MyValue1.ref[] test84(MyValue1 vt1, MyValue1.ref vt2) {
-        MyValue1.ref[] result = new MyValue1[2];
+    public static MyValue1[] test84(MyValue1 vt1, MyValue1 vt2) {
+        MyValue1[] result = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
         result[0] = vt1;
         result[1] = vt2;
         return result;
@@ -2273,7 +2279,7 @@ public class TestNullableArrays {
 
     @Run(test = "test84")
     public void test84_verifier() {
-        MyValue1.ref[] res = test84(testValue1, testValue1);
+        MyValue1[] res = test84(testValue1, testValue1);
         Asserts.assertEquals(res[0].hash(), testValue1.hash());
         Asserts.assertEquals(res[1].hash(), testValue1.hash());
         try {
@@ -2285,15 +2291,15 @@ public class TestNullableArrays {
     }
 
     @Test
-    public static long test85(MyValue1.ref[] va, MyValue1 val) {
+    public static long test85(MyValue1[] va, MyValue1 val) {
         va[0] = val;
         return va[1].hash();
     }
 
     @Run(test = "test85")
     public void test85_verifier() {
-        MyValue1[] va = new MyValue1[2];
-        MyValue1.ref[] vab = new MyValue1.ref[2];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vab = new MyValue1[2];
         va[1] = testValue1;
         vab[1] = testValue1;
         long res = test85(va, testValue1);
@@ -2306,15 +2312,15 @@ public class TestNullableArrays {
 
     // Same as test85 but with ref value
     @Test
-    public static long test86(MyValue1.ref[] va, MyValue1.ref val) {
+    public static long test86(MyValue1[] va, MyValue1 val) {
         va[0] = val;
         return va[1].hash();
     }
 
     @Run(test = "test86")
     public void test86_verifier() {
-        MyValue1[] va = new MyValue1[2];
-        MyValue1.ref[] vab = new MyValue1.ref[2];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vab = new MyValue1[2];
         va[1] = testValue1;
         vab[1] = testValue1;
         long res = test86(va, testValue1);
@@ -2337,7 +2343,7 @@ public class TestNullableArrays {
     // Test initialization of nullable array with constant
     @Test
     public long test87() {
-        MyValue1.ref[] va = new MyValue1.ref[1];
+        MyValue1[] va = new MyValue1[1];
         va[0] = testValue1;
         return va[0].hash();
     }
@@ -2348,23 +2354,25 @@ public class TestNullableArrays {
         Asserts.assertEQ(result, hash());
     }
 
+// TODO we can't cast to null-free arrays
+/*
     // Test narrowing conversion from [L to [Q
     @Test
     @IR(failOn = {ALLOC, ALLOCA, LOOP, LOAD, STORE, TRAP})
-    public static MyValue1[] test88(MyValue1.ref[] va) {
+    public static MyValue1[] test88(MyValue1[] va) {
         return (MyValue1[])va;
     }
 
     @Run(test = "test88")
     public void test88_verifier() {
-        MyValue1[] va = new MyValue1[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         va[0] = testValue1;
         MyValue1[] res = test88(va);
         Asserts.assertEquals(res[0].hash(), testValue1.hash());
         res[0] = testValue1;
         test88(null); // Should not throw NPE
         try {
-            test88(new MyValue1.ref[1]);
+            test88(new MyValue1[1]);
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException cce) {
             // Expected
@@ -2380,30 +2388,30 @@ public class TestNullableArrays {
 
     @Run(test = "test89")
     public void test89_verifier() {
-        MyValue1[] va = new MyValue1[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         va[0] = testValue1;
         MyValue1[] res = test89(va);
         Asserts.assertEquals(((MyValue1)res[0]).hash(), testValue1.hash());
         res[0] = testValue1;
         test89(null); // Should not throw NPE
         try {
-            test89(new MyValue1.ref[1]);
+            test89(new MyValue1[1]);
             throw new RuntimeException("ClassCastException expected");
         } catch (ClassCastException cce) {
             // Expected
         }
     }
-
+*/
     // More cast tests
     @Test
-    public static MyValue1.ref[] test90(Object va) {
-        return (MyValue1.ref[])va;
+    public static MyValue1[] test90(Object va) {
+        return (MyValue1[])va;
     }
 
     @Run(test = "test90")
     public void test90_verifier() {
-        MyValue1[] va = new MyValue1[1];
-        MyValue1.ref[] vab = new MyValue1.ref[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+        MyValue1[] vab = new MyValue1[1];
         try {
           // Trigger some ClassCastExceptions so C2 does not add an uncommon trap
           test90(new Integer[0]);
@@ -2416,14 +2424,14 @@ public class TestNullableArrays {
     }
 
     @Test
-    public static MyValue1.ref[] test91(Object[] va) {
-        return (MyValue1.ref[])va;
+    public static MyValue1[] test91(Object[] va) {
+        return (MyValue1[])va;
     }
 
     @Run(test = "test91")
     public void test91_verifier() {
-        MyValue1[] va = new MyValue1[1];
-        MyValue1.ref[] vab = new MyValue1.ref[1];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+        MyValue1[] vab = new MyValue1[1];
         try {
           // Trigger some ClassCastExceptions so C2 does not add an uncommon trap
           test91(new Integer[0]);
@@ -2437,14 +2445,14 @@ public class TestNullableArrays {
 
     // Test if arraycopy intrinsic correctly checks for flattened source array
     @Test
-    public static void test92(MyValue1.ref[] src, MyValue1.ref[] dst) {
+    public static void test92(MyValue1[] src, MyValue1[] dst) {
         System.arraycopy(src, 0, dst, 0, 2);
     }
 
     @Run(test = "test92")
     public void test92_verifier() {
-        MyValue1[]  va = new MyValue1[2];
-        MyValue1.ref[] vab = new MyValue1.ref[2];
+        MyValue1[]  va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vab = new MyValue1[2];
         va[0] = testValue1;
         vab[0] = testValue1;
         test92(va, vab);
@@ -2453,14 +2461,14 @@ public class TestNullableArrays {
     }
 
     @Test
-    public static void test93(Object src, MyValue1.ref[] dst) {
+    public static void test93(Object src, MyValue1[] dst) {
         System.arraycopy(src, 0, dst, 0, 2);
     }
 
     @Run(test = "test93")
     public void test93_verifier() {
-        MyValue1[]  va = new MyValue1[2];
-        MyValue1.ref[] vab = new MyValue1.ref[2];
+        MyValue1[]  va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] vab = new MyValue1[2];
         va[0] = testValue1;
         vab[0] = testValue1;
         test93(va, vab);
@@ -2472,8 +2480,8 @@ public class TestNullableArrays {
     // that does not modify loaded array element.
     @Test
     public static long test94() {
-        MyValue1.ref[] src = new MyValue1.ref[8];
-        MyValue1[]  dst = new MyValue1[8];
+        MyValue1[] src = new MyValue1[8];
+        MyValue1[]  dst = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 8);
         for (int i = 1; i < 8; ++i) {
             src[i] = testValue1;
         }
@@ -2490,7 +2498,7 @@ public class TestNullableArrays {
     // Test meeting constant TypeInstPtr with InlineTypeNode
     @ForceInline
     public long test95_callee() {
-        MyValue1.ref[] va = new MyValue1.ref[1];
+        MyValue1[] va = new MyValue1[1];
         va[0] = testValue1;
         return va[0].hashInterpreted();
     }
@@ -2601,8 +2609,8 @@ public class TestNullableArrays {
         result = test98((Object[])myInt);
         Asserts.assertEquals(result, rI);
         if (!info.isWarmUp()) {
-            MyValue1[] va = new MyValue1[1];
-            MyValue1.ref[] vab = new MyValue1.ref[1];
+            MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+            MyValue1[] vab = new MyValue1[1];
             result = test98((Object[])va);
             Asserts.assertEquals(((MyValue1)result).hash(), MyValue1.default.hash());
             result = test98((Object[])vab);
@@ -2691,8 +2699,8 @@ public class TestNullableArrays {
         test102(null, (Object[])myInt);
         Asserts.assertEquals(myInt[0], null);
         if (!info.isWarmUp()) {
-            MyValue1[] va = new MyValue1[1];
-            MyValue1.ref[] vab = new MyValue1.ref[1];
+            MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+            MyValue1[] vab = new MyValue1[1];
             test102(testValue1, (Object[])va);
             Asserts.assertEquals(va[0].hash(), testValue1.hash());
             test102(testValue1, (Object[])vab);
@@ -2717,7 +2725,7 @@ public class TestNullableArrays {
         test103(null, (Object[])myInt);
         Asserts.assertEquals(myInt[0], null);
         if (!info.isWarmUp()) {
-            MyValue1[] va = new MyValue1[1];
+            MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
             try {
                 test103(null, (Object[])va);
                 throw new RuntimeException("No NPE thrown");
@@ -2801,8 +2809,8 @@ public class TestNullableArrays {
         result = test106(myInt, (Object[])myInt);
         Asserts.assertEquals(result[0], rI);
         if (!info.isWarmUp()) {
-            MyValue1[] va = new MyValue1[1];
-            MyValue1.ref[] vab = new MyValue1.ref[1];
+            MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+            MyValue1[] vab = new MyValue1[1];
             result = test106(va, (Object[])va);
             Asserts.assertEquals(((MyValue1)result[0]).hash(), MyValue1.default.hash());
             result = test106(vab, (Object[])vab);
@@ -2812,7 +2820,7 @@ public class TestNullableArrays {
 
     // Test that allocation is not replaced by non-dominating allocation
     @ForceInline
-    public long test107_helper(MyValue1.ref[] va, MyValue1 vt) {
+    public long test107_helper(MyValue1[] va, MyValue1 vt) {
         try {
             va[0] = vt;
         } catch (NullPointerException npe) { }
@@ -2821,8 +2829,8 @@ public class TestNullableArrays {
 
     @Test
     public void test107() {
-        MyValue1[] va = new MyValue1[2];
-        MyValue1.ref[] tmp = new MyValue1.ref[2];
+        MyValue1[] va = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 2);
+        MyValue1[] tmp = new MyValue1[2];
         long res1 = test107_helper(va, testValue1);
         long res2 = test107_helper(va, testValue1);
         Asserts.assertEquals(va[0].hash(), testValue1.hash());
@@ -2836,8 +2844,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public Object test108(MyValue1.ref[] src, boolean flag) {
-        MyValue1.ref[] dst = new MyValue1.ref[8];
+    public Object test108(MyValue1[] src, boolean flag) {
+        MyValue1[] dst = new MyValue1[8];
         System.arraycopy(src, 1, dst, 2, 6);
         if (flag) {} // uncommon trap
         return dst[2];
@@ -2846,15 +2854,15 @@ public class TestNullableArrays {
     @Run(test = "test108")
     @Warmup(10000)
     public void test108_verifier(RunInfo info) {
-        MyValue1.ref[] src = new MyValue1.ref[8];
+        MyValue1[] src = new MyValue1[8];
         test108(src, !info.isWarmUp());
     }
 
     // Test LoadNode::can_see_arraycopy_value optimization
     @Test
     public static void test109() {
-        MyValue1[] src = new MyValue1[1];
-        MyValue1.ref[] dst = new MyValue1.ref[1];
+        MyValue1[] src = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
+        MyValue1[] dst = new MyValue1[1];
         src[0] = testValue1;
         System.arraycopy(src, 0, dst, 0, 1);
         Asserts.assertEquals(src[0], dst[0]);
@@ -2868,7 +2876,7 @@ public class TestNullableArrays {
     // Same as test109 but with Object destination array
     @Test
     public static void test110() {
-        MyValue1[] src = new MyValue1[1];
+        MyValue1[] src = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         Object[] dst = new Object[1];
         src[0] = testValue1;
         System.arraycopy(src, 0, dst, 0, 1);
@@ -2883,9 +2891,9 @@ public class TestNullableArrays {
     // Same as test109 but with Arrays.copyOf
     @Test
     public static void test111() {
-        MyValue1[] src = new MyValue1[1];
+        MyValue1[] src = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
         src[0] = testValue1;
-        MyValue1.ref[] dst = Arrays.copyOf(src, src.length, MyValue1.ref[].class);
+        MyValue1[] dst = Arrays.copyOf(src, src.length, MyValue1[].class);
         Asserts.assertEquals(src[0], dst[0]);
     }
 
@@ -2894,14 +2902,14 @@ public class TestNullableArrays {
         test111();
     }
 
-    MyValue1.ref[] refArray = new MyValue1.ref[2];
-    MyValue1[] flatArray = new MyValue1[1];
+    MyValue1[] refArray = new MyValue1[2];
+    MyValue1[] flatArray = (MyValue1[])ValueClass.newNullRestrictedArray(MyValue1.class, 1);
 
-    // Test scalarization of .ref
+    // Test scalarization
     @Test
     @IR(failOn = {ALLOC_G, STORE, TRAP})
     public int test112(boolean b) {
-        MyValue1.ref val = MyValue1.createWithFieldsInline(rI, rL);
+        MyValue1 val = MyValue1.createWithFieldsInline(rI, rL);
         if (b) {
             val = refArray[0];
         }
@@ -2929,7 +2937,7 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC, STORE, TRAP})
     public long test113(boolean b) {
-        MyValue1.ref val = MyValue1.createWithFieldsInline(rI, rL);
+        MyValue1 val = MyValue1.createWithFieldsInline(rI, rL);
         if (b) {
             val = refArray[0];
         }
@@ -2954,8 +2962,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref test114(boolean b) {
-        MyValue1.ref val = MyValue1.createWithFieldsInline(rI, rL);
+    public MyValue1 test114(boolean b) {
+        MyValue1 val = MyValue1.createWithFieldsInline(rI, rL);
         if (b) {
             val = refArray[0];
         }
@@ -2977,7 +2985,7 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC, STORE})
     public int test115(boolean b1, boolean b2, Method m) {
-        MyValue1.ref val = MyValue1.createWithFieldsInline(rI, rL);
+        MyValue1 val = MyValue1.createWithFieldsInline(rI, rL);
         if (b1) {
             val = refArray[0];
         }
@@ -3009,8 +3017,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref test116(boolean b1, boolean b2, Method m) {
-        MyValue1.ref val = MyValue1.createWithFieldsInline(rI, rL);
+    public MyValue1 test116(boolean b1, boolean b2, Method m) {
+        MyValue1 val = MyValue1.createWithFieldsInline(rI, rL);
         if (b1) {
             val = refArray[0];
         }
@@ -3038,7 +3046,7 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC_G, STORE})
     public int test117(boolean b) {
-        MyValue1.ref val = null;
+        MyValue1 val = null;
         if (b) {
             val = refArray[0];
         }
@@ -3058,8 +3066,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref test118(boolean b) {
-        MyValue1.ref val = null;
+    public MyValue1 test118(boolean b) {
+        MyValue1 val = null;
         if (b) {
             val = refArray[0];
         }
@@ -3076,7 +3084,7 @@ public class TestNullableArrays {
     @Test
     @IR(failOn = {ALLOC_G, STORE})
     public int test119(boolean b) {
-        MyValue1.ref val = refArray[0];
+        MyValue1 val = refArray[0];
         if (b) {
             val = null;
         }
@@ -3096,8 +3104,8 @@ public class TestNullableArrays {
     }
 
     @Test
-    public MyValue1.ref test120(boolean b) {
-        MyValue1.ref val = refArray[0];
+    public MyValue1 test120(boolean b) {
+        MyValue1 val = refArray[0];
         if (b) {
             val = null;
         }
@@ -3176,8 +3184,8 @@ public class TestNullableArrays {
 
     @Test
     @IR(failOn = {ALLOC_G, STORE})
-    public long test123(boolean b, MyValue1.ref val, Method m, boolean deopt) {
-        MyValue1.ref[] array = new MyValue1.ref[1];
+    public long test123(boolean b, MyValue1 val, Method m, boolean deopt) {
+        MyValue1[] array = new MyValue1[1];
         array[0] = val;
         Object res = null;
         if (b) {
@@ -3203,15 +3211,15 @@ public class TestNullableArrays {
     }
 
     @ForceInline
-    public Object test124_helper(MyValue2.ref val) {
-        MyValue2.ref[] array = new MyValue2.ref[1];
+    public Object test124_helper(MyValue2 val) {
+        MyValue2[] array = new MyValue2[1];
         array[0] = val;
         return array[0];
     }
 
     @Test
     @IR(failOn = {ALLOC_G, STORE})
-    public long test124(boolean b, MyValue2.ref val, Method m, boolean deopt) {
+    public long test124(boolean b, MyValue2 val, Method m, boolean deopt) {
         Object res = null;
         if (b) {
             res = MyValue2.createWithFieldsInline(rI+1, rD+1);
@@ -3238,14 +3246,14 @@ public class TestNullableArrays {
     }
 
     @ForceInline
-    public void test125_helper(Object[] array, MyValue2.ref val) {
+    public void test125_helper(Object[] array, MyValue2 val) {
         array[0] = val;
     }
 
     @Test
     @IR(failOn = {ALLOC_G, STORE})
-    public long test125(boolean b, MyValue2.ref val, Method m, boolean deopt) {
-        Object[] res = new MyValue2.ref[1];
+    public long test125(boolean b, MyValue2 val, Method m, boolean deopt) {
+        Object[] res = new MyValue2[1];
         if (b) {
             res[0] = MyValue2.createWithFieldsInline(rI+1, rD+1);
         } else {
